force-app/main/default/objects/Imposto__c/Imposto__c.object-meta.xml
<CustomObject>
    <description>Imposto aplicado sobre um produto.</description>
    <label>Imposto</label>
    <nameField>
        <displayFormat>IMPOSTO-{0}</displayFormat>
        <label>Nome do Imposto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impostos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>