force-app/main/default/objects/Imposto__c/fields/CentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentroDistribuicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>