force-app/main/default/objects/Imposto__c/fields/ValorPercentual__c.field-meta.xml
<CustomField>
    <fullName>ValorPercentual__c</fullName>
    <description>Percentual de imposto acrescentada ao valor do produto.</description>
    <label>ValorPercentual</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>