force-app/main/default/objects/Imposto__c/validationRules/Produto_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto_obrigatorio</fullName>
    <active>true</active>
    <description>É obrigatório atribuir um produto.</description>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Escolha um produto.</errorMessage>
</ValidationRule>