force-app/main/default/objects/Imposto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Estado__c</columns>
    <columns>CentroDistribuicao__c</columns>
    <columns>Status__c</columns>
    <columns>ValorPercentual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>